--- a/public/index.html
+++ b/public/index.html
@@ -201,27 +201,25 @@
 		<!-- content -->
 		<main class="md:pt-3 2xl:pt-8">
 			<!-- hero section -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-20 2xl:space-x-48 pt-28 pb-4 md:pb-8 lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center justify-center space-y-10 pt-28 pb-4 md:pb-8">
 				<!-- text -->
 				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
-					<div id="intro-text" class="max-w-full flex flex-col items-center md:block dark:text-gray-300">
+					<div id="intro-text" class="max-w-full flex flex-col items-center justify-center dark:text-gray-300">
 						<!-- logo -->
-						<h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-text-purple text-transparent bg-clip-text">PlayCover</h1>
+						<h1 class="font-extrabold text-[48px] md:text-[5rem] bg-gradient-to-b from-logo-pink to-text-purple text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
-						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">allows you to run iOS apps on your Mac in fullscreen with Mouse, Keyboard & Controller.</p>
+						<p class="md:pl-1 max-w-xs md:max-w-7xl pt-6 md:pt-4 text-center text-lg md:text-2xl">Run iOS apps & games. Fullscreen mode. Mouse, keyboard and controller support.</p>
 
 						<!-- Download buttons -->
-						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-8 lg:pt-6 items-center text-center">
+						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
-							<div class="flex items-center md:h-10 md:w-52">
-								<a class="download-buttons py-2 px-4 drop-shadow-sm bg-logo-purple dark:bg-logo-purple-dark hover:bg-logo-purple-darker dark:hover:bg-logo-purple-darker font-semibold  text-white dark:text-gray-200 rounded-full cursor-pointer  transition duration-100 ease-linear" href=""> Download for M1 Mac </a>
-							</div>
+							<a class="download-buttons text-md uppercase py-3 px-12 rounded-full drop-shadow-sm bg-logo-purple dark:bg-logo-purple-dark hover:bg-logo-purple-darker dark:hover:bg-logo-purple-darker  text-white dark:text-gray-200 cursor-pointer  transition duration-100 ease-linear" href=""> Download for M1 Mac </a>
 
 							<!-- intel -->
 							<div class="flex items-center">
-								<a class="py-2 px-4 cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200 rounded-md" href="#"> Download for Intel Mac </a>
+								<a class="download-buttons text-md uppercase py-3 px-12 rounded-full cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200" href="#"> Download for Intel Mac </a>
 
 								<!-- coming soon text -->
 								<div class="relative text-gray-50 dark:text-gray-200">
@@ -230,43 +228,14 @@
 							</div>
 						</div>
 					</div>
-
-					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17.5rem] 2xl:max-h-[25rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-7 mr-2 pr-0 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.3)</h2>
-
-							<ul class="list-inside list-disc text-sm space-y-4">
-								<li>Game controller key mapping for games that don’t support gamepads (NOTICE: Genshin Impact's native controller support is not working for now)</li>
-								<li>Fixed bug of mouse reset on Burst (Ultimate) in Genshin Impact</li>
-								<li>Smoother mouse movement</li>
-								<li>Fixed improper scaling in Windowed mode (edited)</li>
-								<li>App launcher now allows you run apps directly from PlayCover</li>
-								<li>With 'Update PlayTools' context-menu option you can install new versions of in-game controls without reinstalling the whole app</li>
-								<li>If something goes wrong, you can erase PlayTools settings with 'Reset PlayTools settings' option instead of whole app cache clear</li>
-								<li>'Downloads' tab of sidebar contains links for latest decrypted app versions (I will extended this list and make this dynamic next update)</li>
-								<li>Fixed error with iCloud / Dropbox documents syncing folders</li>
-								<li>Now sidebar has fixed min width and also app has new minimum size</li>
-								<li>Improved downloads UI, so it will provide download link based on your region</li>
-								<li>Improved Settings Ui, so now you can copy the command</li>
-								<li>Multi-lang Support</li>
-								<li>Fixed crash on startup for some users</li>
-								<li>Now Alt/Option button also hides/shows menu bar, so you can easily access settings of Window control buttons</li>
-								<li>PlayCover shows a notification when finished installing an app</li>
-							</ul>
-						</div>
-					</div>
 				</div>
 
 				<!-- hero image -->
 				<div id="hero-image" class="">
 					<div class="group relative">
-						<!-- bg gradient -->
-						<!-- <div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-text-purple blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div> -->
+						<img class="shadow-md dark:hidden max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="shadow-md dark:hidden max-w-xs md:max-w-[48rem] 2xl:max-w-[58.5rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
-
-						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[48rem] 2xl:max-w-[58.5rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
