redesigned main layout

--- a/public/lang/id/index.html
+++ b/public/lang/id/index.html
@@ -17,8 +17,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
 		<!-- Source Sans Pro font-->
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
-		<!-- Neon font -->
-		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+		<!-- Open Sans font -->
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
 	</head>
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-body font-sourceSansPro transition duration-200 ease-in-out">
@@ -216,15 +216,15 @@
 						<!-- Unduhan buttons -->
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
-							<a class="download-buttons text-md uppercase py-3 px-12 rounded-full drop-shadow-sm bg-logo-purple dark:bg-logo-purple-dark hover:bg-logo-purple-darker dark:hover:bg-logo-purple-darker  text-white dark:text-gray-200 cursor-pointer  transition duration-100 ease-linear" href=""> Unduhan for M1 Mac </a>
+							<a class="download-buttons font-openSans text-sm tracking-widest uppercase py-4 px-14 rounded-full drop-shadow-sm bg-logo-purple dark:bg-logo-purple-dark hover:bg-logo-purple-darker dark:hover:bg-logo-purple-darker  text-white dark:text-gray-200 cursor-pointer  transition duration-100 ease-linear" href=""> Unduhan for M1 Mac </a>
 
 							<!-- intel -->
 							<div class="flex items-center">
-								<a class="download-buttons text-md uppercase py-3 px-12 rounded-full cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200" href="#"> Unduhan for Intel Mac </a>
+								<a class="font-openSans text-sm tracking-widest uppercase py-4 px-14 rounded-full cursor-default bg-[#E5E2E3] dark:bg-[#292729] text-gray-400 dark:text-[#494949] transition-colors duration-200" href="#"> Unduhan for Intel Mac </a>
 
 								<!-- coming soon text -->
-								<div class="relative text-gray-50 dark:text-gray-200">
-									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-gray-400 dark:bg-[#353535] rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.4rem] md:bottom-[0.45rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
+								<div class="hidden relative text-gray-50 dark:text-gray-200">
+									<div class=" absolute shadow text-[0.75rem] bg-gray-400 dark:bg-[#312f31] rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.4rem] md:bottom-[0.45rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
 								</div>
 							</div>
 						</div>
