load animation test

--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -429,6 +429,7 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a] animate-bounce animate-pulse overflow-hidden"></div>
 
 		<!-- js -->
+		<script src="/js/load-transitions.js"></script>
 		<script src="/js/language-button.js"></script>
 		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
