--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
 					<div class="group relative">
 						<img class="shadow-md dark:hidden max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform translate-y-56" data-replace='{ "translate-y-56": "translate-y-0" }' src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
@@ -417,6 +417,7 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a] animate-bounce animate-pulse overflow-hidden"></div>
 
 		<!-- js -->
+		<script src="/js/load-transitions.js"></script>
 		<script src="/js/language-button.js"></script>
 		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
