--- a/public/lang/id/legal-notice/index.html
+++ b/public/lang/id/legal-notice/index.html
@@ -409,6 +409,7 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse"></div>
 
 		<!-- js -->
+		<script src="/js/load-transitions.js"></script>
 		<script src="/js/language-button.js"></script>
 		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
