--- a/public/lang/de/index.html
+++ b/public/lang/de/index.html
@@ -234,9 +234,9 @@
 				<!-- hero image -->
 				<div id="hero-image" class="">
 					<div class="group relative">
-						<img class="shadow-md dark:hidden max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<img class="shadow-md block dark:hidden max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:translate-y-44 md:opacity-0" data-replace='{ "md:opacity-0": "md:opacity-100", "md:translate-y-44": "md:translate-y-0" }' src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:translate-y-44 md:opacity-0" data-replace='{ "md:opacity-0": "md:opacity-100", "md:translate-y-44": "md:translate-y-0" }' src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
