--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -29,7 +29,7 @@
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 space-x-10">
 					<a href="/" class="flex items-center">
-						<img class="h-14 md:h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
+						<img class="h-14 md:h-16 w-14 md:w-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
