--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -28,7 +28,7 @@
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 space-x-10">
 					<a href="/lang/cn" class="flex items-center">
-						<img class="h-14 md:h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
+						<img class="h-14 md:h-16 w-14 md:w-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
@@ -234,9 +234,9 @@
 				<!-- hero image -->
 				<div id="hero-image" class="">
 					<div class="group relative">
-						<img class="shadow-md block dark:hidden max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:translate-y-14 md:opacity-0" data-replace='{ "md:opacity-0": "md:opacity-100", "md:translate-y-14": "md:translate-y-0" }' src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<img class="shadow-md block dark:hidden w-[90vw] h-[46.49vw] md:w-[80vw] md:h-[41.3244vw] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:translate-y-14 md:opacity-0" data-replace='{ "md:opacity-0": "md:opacity-100", "md:translate-y-14": "md:translate-y-0" }' src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="shadow-md hidden dark:block max-w-xs md:max-w-[70rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:translate-y-14 md:opacity-0" data-replace='{ "md:opacity-0": "md:opacity-100", "md:translate-y-14": "md:translate-y-0" }' src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="shadow-md hidden dark:block w-[90vw] h-[46.49vw] md:w-[80vw] md:h-[41.3244vw] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:translate-y-14 md:opacity-0" data-replace='{ "md:opacity-0": "md:opacity-100", "md:translate-y-14": "md:translate-y-0" }' src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
