--- a/public/lang/de/faq/index.html
+++ b/public/lang/de/faq/index.html
@@ -163,7 +163,8 @@
 					<a href="/lang/de" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
 					<a href="/lang/de/changelog/" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
-					<a href="/lang/de/faq/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">FAQ</a>
+					<a href="/lang/de/faq/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">FAQ</a>
 					<a href="/lang/de/credits/" class="block text-gray-600 dark:text-gray-300">Mannschaft</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
