--- a/public/lang/es/credits/index.html
+++ b/public/lang/es/credits/index.html
@@ -164,7 +164,8 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
 					<a href="/lang/es/changelog" class="block text-gray-600 dark:text-gray-300">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/es/credits/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Equipo</a>
+					<a href="/lang/es/credits/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Equipo</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
