--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -164,7 +164,8 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
 					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Team</a>
+					<a href="/credits/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Team</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
 
 					<!-- mobile language button -->
