--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -162,7 +162,8 @@
 					<a href="/" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="/faq/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">FAQ</a>
+					<a href="/faq/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">FAQ</a>
 					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Team</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
 
