--- a/public/lang/cn/changelog/index.html
+++ b/public/lang/cn/changelog/index.html
@@ -161,7 +161,8 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/lang/cn" class="block text-gray-600 dark:text-gray-300">主页 </a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
-					<a href="/lang/cn/changelog" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">更新日志 </a>
+					<a href="/lang/cn/changelog" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">更新日志 </a>
 					<a href="/lang/cn/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
 					<a href="/lang/cn/credits/" class="block text-gray-600 dark:text-gray-300">团队</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
