--- a/public/lang/de/credits/index.html
+++ b/public/lang/de/credits/index.html
@@ -164,7 +164,8 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
 					<a href="/lang/de/changelog" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
 					<a href="/lang/de/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/de/credits/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Mannschaft</a>
+					<a href="/lang/de/credits/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Mannschaft</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
 					<!-- mobile language button -->
