--- a/public/lang/es/changelog/index.html
+++ b/public/lang/es/changelog/index.html
@@ -162,7 +162,8 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/lang/es" class="block text-gray-600 dark:text-gray-300">Inicio</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
-					<a href="/lang/es/changelog" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Cambios</a>
+					<a href="/lang/es/changelog" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="/lang/es/credits/" class="block text-gray-600 dark:text-gray-300">Equipo</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
