--- a/public/lang/es/index.html
+++ b/public/lang/es/index.html
@@ -159,7 +159,8 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/lang/es" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Inicio</a>
+					<a href="/lang/es" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Inicio</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
 					<a href="/lang/es/changelog/" class="block text-gray-600 dark:text-gray-300">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
