--- a/public/lang/id/changelog/index.html
+++ b/public/lang/id/changelog/index.html
@@ -162,7 +162,8 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/lang/id" class="block text-gray-600 dark:text-gray-300">Halaman Utama</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
-					<a href="/lang/id/changelog" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Sejarah Perubahan</a>
+					<a href="/lang/id/changelog" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Sejarah Perubahan</a>
 					<a href="/lang/id/faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
 					<a href="/lang/id/credits/" class="block text-gray-600 dark:text-gray-300">Tim</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
