--- a/public/lang/id/credits/index.html
+++ b/public/lang/id/credits/index.html
@@ -164,7 +164,8 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
 					<a href="/lang/id/changelog" class="block text-gray-600 dark:text-gray-300">Sejarah Perubahan</a>
 					<a href="/lang/id/faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
-					<a href="/lang/id/credits/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Tim</a>
+					<a href="/lang/id/credits/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Tim</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
 
 					<!-- mobile language button -->
