--- a/public/lang/ru/changelog/index.html
+++ b/public/lang/ru/changelog/index.html
@@ -162,7 +162,8 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/lang/ru" class="block text-gray-600 dark:text-gray-300">Домой</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
-					<a href="/lang/ru/changelog" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Журнал изменений</a>
+					<a href="/lang/ru/changelog" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Журнал изменений</a>
 					<a href="/lang/ru/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
 					<a href="/lang/ru/credits/" class="block text-gray-600 dark:text-gray-300">Команда</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Связаться с нами</button>
