--- a/public/lang/ru/credits/index.html
+++ b/public/lang/ru/credits/index.html
@@ -165,7 +165,8 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
 					<a href="/lang/ru/changelog" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
 					<a href="/lang/ru/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
-					<a href="/lang/ru/credits/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Команда</a>
+					<a href="/lang/ru/credits/" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Команда</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Связаться с нами</button>
 
 					<!-- mobile language button -->
