--- a/public/lang/ru/index.html
+++ b/public/lang/ru/index.html
@@ -159,7 +159,8 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/lang/ru" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Домой</a>
+					<a href="/lang/ru" class="block text-logo-purple dark:text-logo-purple
+					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Домой</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
 					<a href="/lang/ru/changelog/" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
 					<a href="/lang/ru/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
